--- a/CLASES/Clase 3_1_modulos.ipynb
+++ b/CLASES/Clase 3_1_modulos.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "superb-crown",
    "metadata": {
     "slideshow": {
@@ -99,14 +99,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "substantial-penalty",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "random.randrange(10)"
    ]
@@ -191,14 +202,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d5712f54",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BPF - LOG4 - NV_MAGICCONST - RECIP_BPF - Random - SG_MAGICCONST - SystemRandom - TWOPI - _ONE - _Sequence - _Set - __all__ - __builtins__ - __cached__ - __doc__ - __file__ - __loader__ - __name__ - __package__ - __spec__ - _accumulate - _acos - _bisect - _ceil - _cos - _e - _exp - _floor - _index - _inst - _isfinite - _log - _os - _pi - _random - _repeat - _sha512 - _sin - _sqrt - _test - _test_generator - _urandom - _warn - betavariate - choice - choices - expovariate - gammavariate - gauss - getrandbits - getstate - lognormvariate - normalvariate - paretovariate - randbytes - randint - random - randrange - sample - seed - setstate - shuffle - triangular - uniform - vonmisesvariate - weibullvariate - "
+     ]
+    }
+   ],
    "source": [
     "for elem in dir(random):\n",
     "    print(elem, end=\" - \")"
@@ -244,38 +263,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "88533db0",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'funciones'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mfunciones\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'funciones'"
+     ]
+    }
+   ],
    "source": [
     "import funciones"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "52179de3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'funciones' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mdir\u001b[39m(funciones)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'funciones' is not defined"
+     ]
+    }
+   ],
    "source": [
     "dir(funciones)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "48e8402e",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ArithmeticError',\n",
+       " 'AssertionError',\n",
+       " 'AttributeError',\n",
+       " 'BaseException',\n",
+       " 'BaseExceptionGroup',\n",
+       " 'BlockingIOError',\n",
+       " 'BrokenPipeError',\n",
+       " 'BufferError',\n",
+       " 'BytesWarning',\n",
+       " 'ChildProcessError',\n",
+       " 'ConnectionAbortedError',\n",
+       " 'ConnectionError',\n",
+       " 'ConnectionRefusedError',\n",
+       " 'ConnectionResetError',\n",
+       " 'DeprecationWarning',\n",
+       " 'EOFError',\n",
+       " 'Ellipsis',\n",
+       " 'EncodingWarning',\n",
+       " 'EnvironmentError',\n",
+       " 'Exception',\n",
+       " 'ExceptionGroup',\n",
+       " 'False',\n",
+       " 'FileExistsError',\n",
+       " 'FileNotFoundError',\n",
+       " 'FloatingPointError',\n",
+       " 'FutureWarning',\n",
+       " 'GeneratorExit',\n",
+       " 'IOError',\n",
+       " 'ImportError',\n",
+       " 'ImportWarning',\n",
+       " 'IndentationError',\n",
+       " 'IndexError',\n",
+       " 'InterruptedError',\n",
+       " 'IsADirectoryError',\n",
+       " 'KeyError',\n",
+       " 'KeyboardInterrupt',\n",
+       " 'LookupError',\n",
+       " 'MemoryError',\n",
+       " 'ModuleNotFoundError',\n",
+       " 'NameError',\n",
+       " 'None',\n",
+       " 'NotADirectoryError',\n",
+       " 'NotImplemented',\n",
+       " 'NotImplementedError',\n",
+       " 'OSError',\n",
+       " 'OverflowError',\n",
+       " 'PendingDeprecationWarning',\n",
+       " 'PermissionError',\n",
+       " 'ProcessLookupError',\n",
+       " 'RecursionError',\n",
+       " 'ReferenceError',\n",
+       " 'ResourceWarning',\n",
+       " 'RuntimeError',\n",
+       " 'RuntimeWarning',\n",
+       " 'StopAsyncIteration',\n",
+       " 'StopIteration',\n",
+       " 'SyntaxError',\n",
+       " 'SyntaxWarning',\n",
+       " 'SystemError',\n",
+       " 'SystemExit',\n",
+       " 'TabError',\n",
+       " 'TimeoutError',\n",
+       " 'True',\n",
+       " 'TypeError',\n",
+       " 'UnboundLocalError',\n",
+       " 'UnicodeDecodeError',\n",
+       " 'UnicodeEncodeError',\n",
+       " 'UnicodeError',\n",
+       " 'UnicodeTranslateError',\n",
+       " 'UnicodeWarning',\n",
+       " 'UserWarning',\n",
+       " 'ValueError',\n",
+       " 'Warning',\n",
+       " 'WindowsError',\n",
+       " 'ZeroDivisionError',\n",
+       " '__IPYTHON__',\n",
+       " '__build_class__',\n",
+       " '__debug__',\n",
+       " '__doc__',\n",
+       " '__import__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " 'abs',\n",
+       " 'aiter',\n",
+       " 'all',\n",
+       " 'anext',\n",
+       " 'any',\n",
+       " 'ascii',\n",
+       " 'bin',\n",
+       " 'bool',\n",
+       " 'breakpoint',\n",
+       " 'bytearray',\n",
+       " 'bytes',\n",
+       " 'callable',\n",
+       " 'chr',\n",
+       " 'classmethod',\n",
+       " 'compile',\n",
+       " 'complex',\n",
+       " 'copyright',\n",
+       " 'credits',\n",
+       " 'delattr',\n",
+       " 'dict',\n",
+       " 'dir',\n",
+       " 'display',\n",
+       " 'divmod',\n",
+       " 'enumerate',\n",
+       " 'eval',\n",
+       " 'exec',\n",
+       " 'execfile',\n",
+       " 'filter',\n",
+       " 'float',\n",
+       " 'format',\n",
+       " 'frozenset',\n",
+       " 'get_ipython',\n",
+       " 'getattr',\n",
+       " 'globals',\n",
+       " 'hasattr',\n",
+       " 'hash',\n",
+       " 'help',\n",
+       " 'hex',\n",
+       " 'id',\n",
+       " 'input',\n",
+       " 'int',\n",
+       " 'isinstance',\n",
+       " 'issubclass',\n",
+       " 'iter',\n",
+       " 'len',\n",
+       " 'license',\n",
+       " 'list',\n",
+       " 'locals',\n",
+       " 'map',\n",
+       " 'max',\n",
+       " 'memoryview',\n",
+       " 'min',\n",
+       " 'next',\n",
+       " 'object',\n",
+       " 'oct',\n",
+       " 'open',\n",
+       " 'ord',\n",
+       " 'pow',\n",
+       " 'print',\n",
+       " 'property',\n",
+       " 'range',\n",
+       " 'repr',\n",
+       " 'reversed',\n",
+       " 'round',\n",
+       " 'runfile',\n",
+       " 'set',\n",
+       " 'setattr',\n",
+       " 'slice',\n",
+       " 'sorted',\n",
+       " 'staticmethod',\n",
+       " 'str',\n",
+       " 'sum',\n",
+       " 'super',\n",
+       " 'tuple',\n",
+       " 'type',\n",
+       " 'vars',\n",
+       " 'zip']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import builtins\n",
     "dir(builtins)  "
