Agrego clases y actividades de python

--- a/ACTIVIDADES PYTHON PLUS/ACTIVIDAD 1 PARTE 1/TRECE_Actividad1 (2).ipynb
+++ b/ACTIVIDADES PYTHON PLUS/ACTIVIDAD 1 PARTE 1/TRECE_Actividad1 (2).ipynb
@@ -1,13 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b015a19f",
    "metadata": {},
    "source": [
-    "# Actividad 1  por Python plus - Parte I \n",
+    "# Actividad 1 por Python plus - Parte I\n",
     "\n",
-    "## Resolvé el siguiente desafío:"
+    "## Resolvé el siguiente desafío:\n"
    ]
   },
   {
@@ -16,13 +17,14 @@
    "id": "06d13d89",
    "metadata": {},
    "source": [
-    "**EJERCICIO 13:** dado el archivo denominado [log_catedras](https://archivos.linti.unlp.edu.ar/index.php/s/ofgZh41dUYMYX6H) que contiene  el registro de  accesos al entorno catedras.linti, se desea:\n",
-    "1. Generar una función que retorne los usuarios que alguna vez vieron el estado de la entrega 1 desde la facultad. Esto se puede chequear si la columna \"Contexto del evento\" contiene el texto \"Tarea: Entrega 1\" y la columna \"Nombre evento\" contiene el texto \"Se ha visualizado el estado de la entrega.\" y la dirección IP comienza con \"163.10\". Esta función recibe un parámetro opcional que puede contener: \"A\", para pasar los nombres de usuario  a mayúsculas: \"a\", para pasarlos a mimúsculas o \"None\" si se dejan tal como se encuentran en el archivo. Por defecto la función retorna los nombres tales como aparecen en el archivo. \n",
+    "**EJERCICIO 13:** dado el archivo denominado [log_catedras](https://archivos.linti.unlp.edu.ar/index.php/s/ofgZh41dUYMYX6H) que contiene el registro de accesos al entorno catedras.linti, se desea:\n",
+    "\n",
+    "1. Generar una función que retorne los usuarios que alguna vez vieron el estado de la entrega 1 desde la facultad. Esto se puede chequear si la columna \"Contexto del evento\" contiene el texto \"Tarea: Entrega 1\" y la columna \"Nombre evento\" contiene el texto \"Se ha visualizado el estado de la entrega.\" y la dirección IP comienza con \"163.10\". Esta función recibe un parámetro opcional que puede contener: \"A\", para pasar los nombres de usuario a mayúsculas: \"a\", para pasarlos a mimúsculas o \"None\" si se dejan tal como se encuentran en el archivo. Por defecto la función retorna los nombres tales como aparecen en el archivo.\n",
     "2. Escribir un programa que, utilizando la función anterior, muestre un listado similar al siguiente:\n",
-    " \n",
+    "\n",
     "```\n",
     "---------------------\n",
-    "Usuario en el sistema \n",
+    "Usuario en el sistema\n",
     "---------------------\n",
     "\n",
     "    Butterfree\n",
@@ -31,12 +33,13 @@
     "    Kingler\n",
     "    Tauros\n",
     "```\n",
-    "Ante igual cantidad de accesos, ordenar en forma alfabética ascendente."
+    "\n",
+    "Ante igual cantidad de accesos, ordenar en forma alfabética ascendente.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "id": "5021bb7c",
    "metadata": {},
    "outputs": [
@@ -44,53 +47,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'Hora': '3/04/23, 09:37:32', 'Nombre completo del usuario': 'Butterfree', 'Usuario afectado': '-', 'Contexto del evento': 'Curso: Seminario de  Lenguajes - Opción Python (2023)', 'Nombre evento': 'Informe de registro visualizado', 'Descripción': 'The user with id 12 viewed the log report for the course with id 1159.', 'Dirección IP': '186.137.41.137'}\n",
       "------------\n",
       "System Users\n",
       "------------\n",
-      "Amaura\n",
-      "Bellsprout\n",
-      "Carbink\n",
-      "Charizard\n",
-      "Charmander\n",
-      "Cloyster\n",
-      "Dewgong\n",
-      "Ditto\n",
-      "Doduo\n",
-      "Dragonair\n",
-      "Dugtrio\n",
-      "Exeggutor\n",
-      "Gengar\n",
-      "Geodude\n",
-      "Gloom\n",
-      "Growlithe\n",
-      "Hitmonlee\n",
-      "Jigglypuff\n",
-      "Kingler\n",
-      "Lapras\n",
-      "Lickitung\n",
-      "Machoke\n",
-      "Magikarp\n",
-      "Magmar\n",
-      "Magneton\n",
-      "Metapod\n",
-      "Mr. Mime\n",
-      "Muk\n",
-      "Nidoking\n",
-      "Omastar\n",
-      "Pidgeotto\n",
-      "Poliwag\n",
-      "Ponyta\n",
-      "Rattata\n",
-      "Rhyhorn\n",
-      "Scyther\n",
-      "Seadra\n",
-      "Slowbro\n",
-      "Spearow\n",
-      "Staryu\n",
-      "Venomoth\n",
-      "Victreebel\n",
-      "Voltorb\n",
-      "Weedle\n"
+      "amaura\n",
+      "bellsprout\n",
+      "carbink\n",
+      "charizard\n",
+      "charmander\n",
+      "cloyster\n",
+      "dewgong\n",
+      "ditto\n",
+      "doduo\n",
+      "dragonair\n",
+      "dugtrio\n",
+      "exeggutor\n",
+      "gengar\n",
+      "geodude\n",
+      "gloom\n",
+      "growlithe\n",
+      "hitmonlee\n",
+      "jigglypuff\n",
+      "kingler\n",
+      "lapras\n",
+      "lickitung\n",
+      "machoke\n",
+      "magikarp\n",
+      "magmar\n",
+      "magneton\n",
+      "metapod\n",
+      "mr. mime\n",
+      "muk\n",
+      "nidoking\n",
+      "omastar\n",
+      "pidgeotto\n",
+      "poliwag\n",
+      "ponyta\n",
+      "rattata\n",
+      "rhyhorn\n",
+      "scyther\n",
+      "seadra\n",
+      "slowbro\n",
+      "spearow\n",
+      "staryu\n",
+      "venomoth\n",
+      "victreebel\n",
+      "voltorb\n",
+      "weedle\n"
      ]
     },
     {
@@ -142,7 +146,7 @@
        " None]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
