--- a/CLASES/Clase4_Archivos.ipynb
+++ b/CLASES/Clase4_Archivos.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "5fcc3301",
    "metadata": {
     "slideshow": {
@@ -208,7 +208,7 @@
        "'--ip=127.0.0.1'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f7349694",
    "metadata": {
     "slideshow": {
@@ -535,7 +535,7 @@
        "'C:\\\\Users\\\\Usuario\\\\Desktop\\\\FACULTAD\\\\2do_Año\\\\PRIMER_SEMESTRE\\\\Seminario_de_Lenguajes'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "c377b2fe",
    "metadata": {
     "slideshow": {
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "a14f36e3",
    "metadata": {
     "slideshow": {
@@ -747,14 +747,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "010634d1",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'C:\\\\Users\\\\Usuario\\\\Desktop\\\\FACULTAD\\\\2do_Año\\\\PRIMER_SEMESTRE\\\\Seminario_de_Lenguajes\\\\teorias\\\\ejemplos\\\\clase4\\\\muchachos.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 13\u001b[0m\n\u001b[0;32m      9\u001b[0m     otra_forma()\n\u001b[0;32m     12\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m__name__\u001b[39m \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m__main__\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m---> 13\u001b[0m     otra_forma()\n",
+      "Cell \u001b[1;32mIn[12], line 13\u001b[0m, in \u001b[0;36motra_forma\u001b[1;34m()\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39motra_forma\u001b[39m():\n\u001b[1;32m---> 13\u001b[0m     f \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(archi_muchachos,\u001b[39m\"\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m     14\u001b[0m     \u001b[39mfor\u001b[39;00m linea \u001b[39min\u001b[39;00m f:\n\u001b[0;32m     15\u001b[0m         \u001b[39mprint\u001b[39m(linea)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    275\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[0;32m    276\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    277\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    278\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    279\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m     )\n\u001b[1;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:\\\\Users\\\\Usuario\\\\Desktop\\\\FACULTAD\\\\2do_Año\\\\PRIMER_SEMESTRE\\\\Seminario_de_Lenguajes\\\\teorias\\\\ejemplos\\\\clase4\\\\muchachos.txt'"
+     ]
+    }
+   ],
    "source": [
     "def main():\n",
     "    print('Leo caracteres')\n",
@@ -898,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "155d57b0",
    "metadata": {
     "slideshow": {
@@ -942,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "a72a23bc",
    "metadata": {
     "slideshow": {
@@ -976,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "d740823a",
    "metadata": {
     "slideshow": {
@@ -1015,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "14479618",
    "metadata": {
     "slideshow": {
@@ -1050,7 +1064,8 @@
    "source": [
     "datos_a_mostrar = json.dumps(datos, indent=4)\n",
     "print(datos_a_mostrar)\n",
-    "archivo.close()"
+    "archivo.close()\n",
+    "type(datos_a_mostrar)"
    ]
   },
   {
@@ -1661,7 +1676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
